espresso (0.99.46) UNRELEASED; urgency=low

  * Disable swap before starting gparted or qtparted. partman will enable it
    again after mountpoint selection if any swap partitions were selected.
  * Install debconf-get again, lost in the component packaging merge.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 12 Apr 2006 04:02:34 +0100

espresso (0.99.45) dapper; urgency=low

  * Fix validation to accept hyphens in hostname (thanks, Alexandre Otto
    Strube; closes: Malone #39218).
  * GTK frontend:
    - Avoid crash if no partition is selected for a given mount point
      (closes: Malone #39116).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 12 Apr 2006 03:45:45 +0100

espresso (0.99.44) dapper; urgency=low

  * GTK frontend:
    - Say "Selected region" rather than "Selected country".
    - Set default hostname to <username>-desktop or <username>-laptop
      depending on the result of laptop-detect, unless the hostname has been
      edited by hand.
    - Set initial language based on boot parameter from gfxboot or previous
      espresso run (closes: Malone #39051).
  * Depend on localechooser-data (>= 0.27ubuntu12) for a matching
    languagelist (closes: Malone #39043).
  * Silently skip languages rather than crashing if we can't find their
    language code.
  * Add ${shlibs:Depends} to espresso's and espresso-frontend-gtk's Depends
    (closes: Malone #39115).
  * Retranslate Cancel/Back/Forward buttons when changing language.
  * Update translations from Rosetta: Arabic, Czech, French, Hungarian,
    Lithuanian, Macedonian, Norwegian Bokmål, Dutch, Portuguese (Brazil),
    Tagalog, Ukrainian.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Apr 2006 17:40:35 +0100

espresso (0.99.43) dapper; urgency=low

  [ Colin Watson ]
  * Add /cdrom/casper/filesystem.squashfs to the list of filesystem images
    we try to mount if casper didn't do it for us.
  * Use choose-mirror and apt-setup to set up a standard
    /etc/apt/sources.list.
  * GTK frontend: